RESOLVED FIXED51394
[GTK] minimal build with --database fails
https://bugs.webkit.org/show_bug.cgi?id=51394
Summary [GTK] minimal build with --database fails
Philippe Normand
Reported 2010-12-21 06:57:01 PST
../../WebKit/gtk/webkit/webkitprivate.cpp: In function ‘void webkit_init()’: ../../WebKit/gtk/webkit/webkitprivate.cpp:137: error: ‘cacheStorage’ is not a member of ‘WebCore’ make[1]: *** [WebKit/gtk/webkit/libwebkitgtk_3_0_la-webkitprivate.lo] Error 1 cacheStorage usage there should be guarded with ENABLE(OFFLINE_WEB_APPLICATIONS) as in ApplicationCacheStorage.cpp where it is implemented.
Attachments
proposed patch (1.50 KB, patch)
2010-12-21 07:09 PST, Philippe Normand
eric: review+
Philippe Normand
Comment 1 2010-12-21 07:09:59 PST
Created attachment 77109 [details] proposed patch
Eric Seidel (no email)
Comment 2 2010-12-23 19:30:37 PST
Comment on attachment 77109 [details] proposed patch OK.
Eric Seidel (no email)
Comment 3 2010-12-23 19:30:59 PST
Does this need both DATABASE and OFFLINE_WEB_APPLICATIONS?
Philippe Normand
Comment 4 2010-12-24 01:05:22 PST
(In reply to comment #3) > Does this need both DATABASE and OFFLINE_WEB_APPLICATIONS? Right webkit_set_web_database indeed needs DATABASE. Will fix up and commit, thanks for the review Eric!
Philippe Normand
Comment 5 2010-12-24 01:37:24 PST
I'll guard the webkit_set_web_database_directory_path() call with ENABLE(DATABASE) and the cacheStorage() stuff with ENABLE(OFFLINE_WEB_APPLICATIONS)
Philippe Normand
Comment 6 2010-12-24 01:40:55 PST
(In reply to comment #5) > I'll guard the webkit_set_web_database_directory_path() call with ENABLE(DATABASE) and the cacheStorage() stuff with ENABLE(OFFLINE_WEB_APPLICATIONS) Oh well ENABLE(DATABASE) is already checked in webkit_set_web_database_directory_path() code, so in the end I don't think it's needed in webkitprivate.cpp
Philippe Normand
Comment 7 2010-12-24 02:13:14 PST
Note You need to log in before you can comment on or make changes to this bug.