2010-12-21  Philippe Normand  <pnormand@igalia.com>

Reviewed by Eric Seidel.

        [GTK] minimal build with --database fails
        https://bugs.webkit.org/show_bug.cgi?id=51394

        * webkit/webkitprivate.cpp:
        (webkit_init): Use cacheStorage() only if the
        OFFLINE_WEB_APPLICATIONS feature is enabled.

Canonical link: https://commits.webkit.org/64959@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74620 268f45cc-cd09-0410-ab3c-d52691b4dbfc